      ================================================================================================
      DATE                  DATE                           (same)
      DATETIME              DATETIME YEAR TO FRACTION(5)   (same)
      TIME                  INTERVAL HOUR TO FRACTION(5)   DATETIME HOUR TO FRACTION(5)

------------ DB-Manul forked between version 3.5.3 and Liquibase 3.6.0

Changes in Liquibase version 3.5.2 (2016.09.21)

-  [CORE-1863] - PostgreSQL blob is mapped to bytea instead of oid
-  [CORE-2693] - Postgresql dropAll with serial columns fails because tables are dropped then sequences which no longer exist
-  [CORE-2698] - <sqlFile> Oracle scripts with ending / are not actually getting executed even with splitStatements="false"
-  [CORE-2752] - Jtds has silent exceptions in db.getConnectionSchemaName
-  [CORE-2753] - defaultValueSequenceNext forgets schema name
-  [CORE-2754] - update table columns are not quoted when requested
-  [CORE-2756] - Null pointer exception from FileSystemResourceAccessor
-  [CORE-2757] - Databasechangelog ORDEREXECUTED and DEPLOYMENT_ID not updated when a changeSet is reran
-  [CORE-2758] - Debian package shouldn't symlink liquibase binary to absolute path
-  [CORE-2761] - 3.5.1: includeAll from the command line uses the absolute path as the changeSet path
-  [CORE-2763] - Postgresql schemas should default to lower case
-  [CORE-2765] - dbms in preConditions yaml changelog causes parsing error
-  [CORE-2770] - Can't read remarks from mssql 2000
-  [CORE-2774] - Can't read all columns from mssql2000
-  [CORE-2775] - Oracle Sequences not Generated in generateChangeLog after 3.4.1
-  [CORE-2778] - Sybase ASE: Incorrect syntax near the keyword 'ALTER'
-  [CORE-2780] - java.sql.SQLException: PooledConnection has already been closed
-  [CORE-2781] - DB2: custom-generated indexes for primary keys are not preserved in diff/generateChangeLog